# WorkPlus

./: .gitignore  Readme.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1task.md  2bug.md  meetinglog.md  task.md
client/: App.tsx  package-lock.json  package.json  types.tsx
client/src/constants/: AppColors.tsx
client/src/navigation/: index.tsx
client/src/navigation/stacks/: HomeStackNavigation.tsx  LoginStackNavigator.tsx  MyPageStackNavigation.tsx  UploadStackNavigtaion.tsx
client/src/screens/HomeScreens/: HomeMainScreen.tsx
client/src/screens/LoginScreens/: LoginMainScreen.tsx  LoginSuccessScreen.tsx
client/src/screens/MyPageScreens/: MyPageMainScreen.tsx
client/src/screens/UploadScreens/: UploadMainScreen.tsx
server/: main.py  pyproject.toml
server/app/: __init__.py  configs.py  db.py
server/app/auth/: __init__.py  libs.py  models.py  routes.py
server/app/auth/base/: libs.py
server/app/auth/google/: backend.py  routes.py
server/app/auth/kakao/: backend.py  client.py  routes.py
server/app/auth/naver/: backend.py  client.py  routes.py
server/app/common/: consts.py
server/app/routes/: auth.py
server/tests/: test_main.py
